--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,31 @@ h5,
 p {
     margin: 0;
 }
+/* small device */
 .container {
-    width: 1158px;
+    min-width: 320px;
+    max-width: 428px;
+    outline: 2px solid red;
+    outline-offset: -2px;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 16px;
+
+}
+
+/* tablet device */
+@media only screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 16px;
+    
+  }
+}
+
+/* laptop device */
+@media only screen and (min-width: 1158px) {
+    .container {
+      max-width: 1158px;
+    }
 }
 .list .link {
     font-weight: 500;
@@ -206,51 +227,120 @@ address {
   | section-two
   |============================
 */
-.section-two-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-    margin-bottom: 8px;
-}
+
+/* small device */
 .section-two-text {
-    width: 264px;
+    max-width: 396px;
     height: auto;
     font-weight: 400;
+    color: #434455;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
 }
-.section-two .title {
-    font-size: 36px;
-    line-height: 1.11;
+
+
+/* laptop */
+@media only screen and (min-width: 1158px) {
+  .section-two-text {
+    font-weight: 400;
+  }
+}
+
+/* small device */
+.section-two-title {
     text-align: center;
+    max-width: 396px;
+    font-size: 36px;
+    line-height: 1.11;  
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    color: #2e2f42;
+    color: #2e2f42; 
+    font-weight: 700;
+    letter-spacing: 0.72px;
+    margin-bottom: 8px;
 }
-.section-two .list {
+
+
+/* tablet device */
+@media only screen and (min-width: 768px) {
+  .section-two-title {
+    text-align: left;
+  }
+}
+
+/* laptop device */
+@media only screen and (min-width: 1158px) {
+   .section-two-title {
+    
+    font-size: 20px;
+    font-weight: 500px;
+    line-height: 1.2;
+    letter-spacing: 0.4px;
+    }
+}
+
+
+.section-two-li:not(:last-child) {
+    margin-bottom: 72px;
+
+
+}
+@media only screen and (min-width: 768px) {
+  .section-two-li {
+    width: 356px; 
+  } 
+}
+@media only screen and (min-width: 1158px) {
+    .section-two-li {
+        display: block;
+        width: calc((100% - 72px) / 4);
+    }
+}
+
+
+@media only screen and (min-width: 768px) {
+  .section-two .list {
+      display: flex;
+      flex-wrap: wrap;
+      row-gap: 72px;
+      column-gap: 24px;
+      
+  } 
+}
+@media only screen and (min-width: 1158px) {
+  .section-two .list {
+    padding: 0 16px;
     display: flex;
     gap: 24px;
+  }
 }
+
+
 .section-two {
     padding: 120px 0;
 }
-.section-two-li {
-    display: block;
-    width: calc((100% - 72px) / 4);
-}
+
 .section-two-icons {
     flex-shrink: 0;
 }
-.section-two-div {
-    width: 264px;
-    height: 112px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F4F4FD;
-    border-radius: 4px;
-    flex-shrink: 0;
-    margin-bottom: 8px;
+@media only screen and (min-width: 1158px) {
+  .section-two-div {
+      width: 264px;
+      height: 112px;
+      display: flex;
+      justify-content: center;
+      align-items: center; 
+      background-color: #F4F4FD;
+      border-radius: 4px;
+      flex-shrink: 0;
+      margin-bottom: 8px;
+  } 
+}
+@media only screen and (max-width: 1157px) {
+  .section-two-div {
+      display: none;
+  } 
 }
 /**
   |============================
@@ -361,29 +451,41 @@ address {
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
-    letter-spacing: 0.72px;      text-transform: capitalize;
+    letter-spacing: 0.72px;      
+    text-transform: capitalize;
     margin-bottom: 72px;
+    
 }
 .section-five .list {
-    display: flex;
+    display: inline-flex;
+    flex-wrap: wrap;
+    column-gap: 16px;
+    row-gap: 72px;
+    margin: 0 auto;
+    /* display: flex;
     gap: 24px;
     justify-content: center;
     margin-top: 72px;
-    margin-bottom: 0;
+    margin-bottom: 0; */
 }
-.section-five-link {
+
+  .section-five-link {
     display: flex;
     justify-content: center;
-    width: 168px;
+    max-width: 190px;
+    /* width: 168px; */
     height: 88px;
     align-items: center;
     border: 1px solid #8E8F99;
     border-radius: 4px;
-    padding: 16px 32px;
+    padding: 16px 40px;
+    /* padding: 16px 32px; */
     color: #8E8F99;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  } 
+
+
 .section-five-icon {
     fill: currentColor;
 }
