--- a/css/styles.css
+++ b/css/styles.css
@@ -363,6 +363,13 @@ address {
     margin: 0 auto;
     padding-bottom: 120px;
 }
+
+@media only screen and (max-width: 1157px) {
+  .section-three {
+    display: none;
+  }
+}
+
 .section-three-li {
     display: block;
     width: calc((100% - 48px) / 3);
@@ -442,39 +449,76 @@ address {
   |============================
 */
 .section-five {
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 96px 0;
 }
-.section-five-title {
-    text-align: center;
-    color: var(--color2);
-    font-size: 36px;
-    font-weight: 700;
-    line-height: 1.11;
-    letter-spacing: 0.72px;      
-    text-transform: capitalize;
-    margin-bottom: 72px;
+
+@media only screen and (min-width: 1158px) {
+  .section-five {
+      padding: 120px 0;
     
+  }
 }
-.section-five .list {
-    display: inline-flex;
-    flex-wrap: wrap;
-    column-gap: 16px;
-    row-gap: 72px;
+  .section-five-title {
+      text-align: center;
+      color: var(--color2);
+      font-size: 36px;
+      font-weight: 700;
+      line-height: 1.11;
+      letter-spacing: 0.72px;      
+      text-transform: capitalize;
+      margin-bottom: 72px; 
+  }
+
+@media only screen and (max-width: 767px) {
+  .section-five-li {
+      width: calc((100% - 16px) / 2);
+      height: 88px;
+    
+  }
+}
+
+
+
+
+@media only screen and (max-width: 1157px) {
+  .section-five .list {
+      display: inline-flex;
+      flex-wrap: wrap;
+      column-gap: 16px;
+      row-gap: 72px;
+      margin: 0 auto;
+    
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .section-five .list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 24px;
+    max-width: 552px;
+    max-height: 360px;
     margin: 0 auto;
-    /* display: flex;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .section-five .list {
+    display: flex;
     gap: 24px;
     justify-content: center;
     margin-top: 72px;
-    margin-bottom: 0; */
+    margin-bottom: 0;
+  }
 }
 
+
   .section-five-link {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
-    max-width: 190px;
     /* width: 168px; */
-    height: 88px;
     align-items: center;
     border: 1px solid #8E8F99;
     border-radius: 4px;
@@ -485,17 +529,25 @@ address {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   } 
 
+  @media only screen and (min-width: 768px) {
+    .section-five-link {
+      max-width: 168px;
+      min-height: 88px;
+    }
+  }
 
-.section-five-icon {
-    fill: currentColor;
-}
 .section-five-link:hover,
 .section-five-link:focus {
     border-color: #404BBF;
     color: #404BBF;
 }
+
 .section-five .link {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.section-five-icon {
+    fill: currentColor;
 }
 /**
   |============================
@@ -506,6 +558,17 @@ address {
     background-color: #2e2f42;
     padding: 100px 0;
 }
+@media only screen and (min-width: 768px) {
+  .footer {
+    padding: 96px 0;
+  }
+}
+@media only screen and (min-width: 1158px) {
+  .footer {
+    padding: 100px 0;
+  }
+}
+
 .footer-link {
     font-family: "Raleway", sans-serif;
     font-style: normal;
@@ -526,15 +589,35 @@ address {
     line-height: 1.5;
     color: #F4F4FD;
     letter-spacing: 0.02em;
-    width: 264px;
+    max-width: 268px;
+    margin: 0 auto 72px auto;
+    text-align: left;
 }
-.footer .container {
-    display: flex;
-    align-items: baseline;
+@media only screen and (min-width: 768px) {
+  .footer-text {
+    max-width: 264px;
+    margin: 0 24px 72px auto;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .footer .container {
+      display: flex;
+      align-items: baseline;
+      flex-wrap: wrap;
+    padding: 0;
+  }
 }
 .footer-webstudio {
-    margin-right: 120px;
+    text-align: center;
+    
+    /* margin-right: 120px; */
 }
+@media only screen and (min-width: 768px) {
+  .footer-webstudio {
+    margin-left: 108px;
+  }
+}
+
 .footer-network p {
     font-size: 16px;
     font-weight: 500;
@@ -542,7 +625,15 @@ address {
     letter-spacing: 0.32px;
     color: #FFFFFF;
     margin-bottom: 16px;
+    text-align: center;
 }
+
+@media only screen and (min-width: 768px) {
+  .footer-network p {
+    text-align: left;
+  }
+}
+
 .footer-network {
     display: flex;
     flex-direction: column;
@@ -563,13 +654,122 @@ address {
 .footer-network .list {
     display: flex;
     gap: 16px;
-    margin: 0 auto;
-    margin-right: 80px;
+    margin: 0 auto 72px auto;
+    /* margin-right: 80px; */
 }
 .footer-network-link:hover,
 .footer-network-link:focus {
     background-color: #31D0AA;
 }
+
+/**
+  |============================
+  | footer subscribe
+  |============================
+*/
+@media only screen and (min-width: 768px) {
+  .footer-subscribe {
+      margin-left: 108px;
+    
+  }
+}
+
+.footer-subscribe-subtitle {
+    color: #FFF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    margin-bottom: 16px;
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer-subscribe-subtitle {
+    text-align: left;
+  }
+}
+
+.footer-subscribe-form {
+    display: flex;
+    gap: 24px;
+}
+
+
+.footer-subscribe-input {
+    /* width: 264px; */
+    width: 100%;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #FFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    padding: 8px 16px;
+    color: #FFFFFF;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    outline: none;
+    margin-bottom: 16px;
+}
+@media only screen and (min-width: 768px) {
+  .footer-subscribe-input {
+    width: 264px;
+  }
+}
+
+
+.footer-subscribe-input::placeholder {
+    color: #FFF;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.48px;
+}
+
+.footer-subscribe-btn {
+    background-color: #4D5AE5;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    padding: 8px 24px;
+    display: block;
+    border: none;
+    margin: 0 auto;
+    border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.footer-icon-fly {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-subscribe-icon {
+    fill: #FFFFFF;
+    margin-left: 16px;
+}
+
+.footer-subscribe-btn:hover,
+.footer-subscribe-btn:focus {
+    color: #FFFFFF;
+    background-color: #404BBF;
+}
+
+.footer-subscribe-input:focus {
+    border-color: #4D5AE5;
+}
+
 
 /**
   |============================
@@ -914,87 +1114,5 @@ address {
 }
 .modal-form-checkbox:checked + .modal-form-agreement-desc > .modal-form-custom-checkbox > .modal-form-agreement-icon {
     opacity: 1;
-}
-/**
-  |============================
-  | footer subscribe
-  |============================
-*/
-
-
-.footer-subscribe-subtitle {
-    color: #FFF;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
-    margin-bottom: 16px;
-}
-
-.footer-subscribe-form {
-    display: flex;
-    gap: 24px;
-}
-
-
-.footer-subscribe-input {
-    width: 264px;
-    height: 40px;
-    border-radius: 4px;
-    border: 1px solid #FFF;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    background-color: transparent;
-    padding: 8px 16px;
-    color: #FFFFFF;
-    font-size: 12px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    outline: none;
-}
-.footer-subscribe-input::placeholder {
-    color: #FFF;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0.48px;
-}
-.footer-subscribe-btn {
-    background-color: #4D5AE5;
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    padding: 8px 24px;
-    display: block;
-    border: none;
-    margin: 0 auto;
-    border-radius: 4px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-}
-.footer-icon-fly {
-    min-width: 165px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.footer-subscribe-icon {
-    fill: #FFFFFF;
-    margin-left: 16px;
-}
-
-.footer-subscribe-btn:hover,
-.footer-subscribe-btn:focus {
-    color: #FFFFFF;
-    background-color: #404BBF;
-}
-.footer-subscribe-input:focus {
-    border-color: #4D5AE5;
 }
 
