--- a/css/styles.css
+++ b/css/styles.css
@@ -383,6 +383,12 @@ address {
     background-color: #F4F4FD;
     padding: 120px 0;
 }
+@media only screen and (min-width: 320px) and (max-width: 1157px) {
+  .section-four {
+    padding: 96px 0;
+  }
+}
+
 .section-four-title {
     font-size: 36px;
     line-height: 1.11;
@@ -396,7 +402,22 @@ address {
     background-color: #FFFFFF;
     border-radius: 0 0 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+    max-width: 264px;
+    margin: 0 auto;
 }
+@media only screen and (min-width: 768px) {
+  .section-four .page {
+    margin: 0;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .section-four .page:not(:last-child) {
+      margin-bottom: 72px;
+    
+  }
+}
+
 .section-four-caption {
     font-weight: 500;
     font-size: 20px;
@@ -405,19 +426,35 @@ address {
     color: #2e2f42;
     margin-bottom: 8px;
 }
-.section-four {
-    padding-bottom: 120px;
+
+@media only screen and (min-width: 768px) {
+  .section-four .list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 64px 24px;
+      justify-content: center;
+      
+    
+  }
 }
-.section-four .list {
-    display: flex;
+@media only screen and (min-width: 1158px) {
+  .section-four .list {
+    flex-wrap: nowrap;
     gap: 24px;
     margin: 0 auto;
+  }
 }
+
 .section-four-people {
     padding: 32px 16px 0 16px;
     text-align: center;
     padding: 32px 0;
 }
+.section-four .page > img {
+    margin: auto;
+}
+
+
 .section-four-link {
     display: flex;
     width: 40px;
@@ -593,28 +630,47 @@ address {
     margin: 0 auto 72px auto;
     text-align: left;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
   .footer-text {
     max-width: 264px;
     margin: 0 24px 72px auto;
   }
 }
+@media only screen and (min-width: 1158px) {
+  .footer-text {
+    max-width: 264px;
+  }
+}
+
 @media only screen and (min-width: 768px) {
   .footer .container {
-      display: flex;
-      align-items: baseline;
-      flex-wrap: wrap;
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
     padding: 0;
   }
 }
+@media only screen and (min-width: 1158px) {
+  .footer .container {
+    flex-wrap: nowrap;
+  }
+}
+
 .footer-webstudio {
     text-align: center;
     
-    /* margin-right: 120px; */
+    
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
   .footer-webstudio {
     margin-left: 108px;
+  }
+}
+
+@media only screen and (min-width: 1158px) {
+  .footer-webstudio {
+    text-align: left;
+    margin-right: 120px;
   }
 }
 
@@ -698,7 +754,6 @@ address {
 
 
 .footer-subscribe-input {
-    /* width: 264px; */
     width: 100%;
     height: 40px;
     border-radius: 4px;
