--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ button {
 ul {
     list-style-type: none;
     padding-left: 0;
+    margin: 0;
 }
 img {
     display: block;
@@ -816,9 +817,11 @@ address {
   }
 }
 
-.footer-subscribe-form {
-    display: flex;
-    gap: 24px;
+@media only screen and (min-width: 768px) {
+  .footer-subscribe-form {
+      display: flex;
+      gap: 24px;
+  }
 }
 
 
@@ -1066,6 +1069,8 @@ address {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
 }
+
+
 .modal-btn {
     position: absolute;
     top: 24px;
@@ -1285,8 +1290,8 @@ address {
     left: 0;
     width: 100vw;
     height: 100vh;
-    padding: 32px;
-    background-color: #3f51b5;
+    padding: 80px 35px 40px 40px;
+    background-color: #fff;
     z-index: 999;
 
     transform: translateX(100%);
@@ -1302,17 +1307,95 @@ address {
     top: 16px;
     right: 16px;
     color: #fff;
+    border: 1px solid #E7E9FC;
 }
 
 .mobile-menu {
     padding: 0;
     margin: 0;
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 284px;
 }
+
+
 
 .mobile-menu .link {
     display: block;
-    padding: 10px;
-    color: #fff;
+    color: #2E2F42;
     text-decoration: none;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.1;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+.mobile-menu-li .active {
+    color: #404bbf;
+}
+
+.mobile-menu-li .link:hover,
+.mobile-menu-li .link:focus {
+    color: #404bbf;
+}
+.address-list-mobil {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-right: 0;
+    gap: 40px;
+    margin-bottom: 48px;
+    justify-content: center;
+}
+
+.address-link-mobil-email {
+    list-style: none;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color1);
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.4px;
+}
+
+.address-link-mobil-email:hover,.address-list-mobil
+.address-link-mobil-email:focus {
+    color: #404bbf;
+}
+
+.address-link-mobil-phone {
+    list-style: none;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--color1);
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #4D5AE5;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.1;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+}
+
+.address-link-mobil-phone:hover,
+.address-link-mobil-phone:focus {
+    color: #404bbf;
+}
+
+.section-mobil-network {
+    display: flex;
+    align-items: center;
+    gap: 56px;
+    margin-top: 8px;
 }
